doc 1.1
